<resources>
    <string name="app_name">End The Boss</string>
    <string name="app_title">END THE BOSS</string>
    <string name="button_left">Q</string>
    <string name="button_up">Z</string>
    <string name="button_right">D</string>
    <string name="button_down">S</string>
    <string name="button_attaque">A</string>
    <string name="button_fin_tour">F</string>
    <string name="defaut_mouvement_restant_text">Mouvement restant : %1$d</string>
    <string name="defaut_nom_personnage_text">PATATESUPREME</string>
    <string name="defaut_nom_classe">Archer</string>
    <string name="defaut_nom_sort">Lancer de patates</string>
    <string name="defaut_action_sort">Lancer  sort >></string>
    <string name="hint_adresse_ip">ex: 10.1.114.2 ou localhost</string>
    <string name="hint_nom_personnage">ex: PATATESUPREME</string>
    <string name="button_connexion">Connexion</string>
    <string name="label_adresse_ip">Adresse du serveur : </string>
    <string name="label_nom_personnage">Nom de joueur : </string>
    <string name="label_classe">Classe</string>
    <string name="defaut_titre_lobby">SALLE DE JEU</string>
    <string name="defaut_player_count_label">Joueurs %1$d/4</string>
    <string name="defaut_button_ready_lancer">Confirmer choix perso</string>
    <string name="choix_impact_sort">Choisix impact</string>
    <string name="annuler_impact_sort">Annuler impact &#60;&#60;</string>
    <string name="lancer_sort">Lancer sort &#62;&#62;</string>
    <string name="attente_joueur">En attente de joueurs...</string>
    <string name="vide">(Vide)</string>
    <string name="none">&#60;Aucun&#62;</string>
    <string name="fin_jeu_label">Fin du jeu</string>
    <string name="joueurs_label">Joueurs</string>
    <string name="ias_label">IA</string>
    <string name="temps_de_jeu_label">Temps de jeu</string>
    <string name="dernieres_parties_label">Dernières parties</string>
    <string name="remporte_partie_label">%1$ remporte la partie</string>
    <string name="ia_gagne_label">Tous les héros sont mort</string>
    <string name="button_retourner_menu">Retourner au menu principal</string>
    <string name="score_title">Scores</string>
    <string name="button_reset_scores">Effacer scores</string>

    <string-array name="personnage_array">
        <item>Tank</item>
        <item>Archer</item>
        <item>Sorcier</item>
        <item>Pretre</item>
        <item>Boss</item>
        <item>Sbire</item>
    </string-array>
</resources>
