<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_light"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_adresse_ip"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/edit_text_adresse_ip"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_adresse_ip"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nom_personnage"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/edit_text_nom_personnage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nom_personnage"/>

    <Button
        android:id="@+id/button_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connexion"/>

</LinearLayout>