<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/interfacejeu"
    android:id="@+id/controls_layout"
    android:padding="5dp">

    <Button
        android:id="@+id/button_left"
        android:layout_alignParentBottom="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/button_left"/>

    <Button
        android:id="@+id/button_down"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button_left"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/button_down"/>

    <Button
        android:id="@+id/button_right"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button_down"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/button_right"/>

    <Button
        android:id="@+id/button_up"
        android:layout_above="@+id/button_down"
        android:layout_alignLeft="@+id/button_down"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/button_up"/>

    <Button
        android:id="@+id/button_fin_tour"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/button_fin_tour"/>

    <Button
        android:id="@+id/button_attaque"
        android:layout_above="@+id/button_fin_tour"
        android:layout_alignParentRight="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/button_attaque"/>

    <TextView
        android:id="@+id/text_view_mouvement_restant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_up"
        android:layout_centerHorizontal="true"
        android:text="@string/defaut_mouvement_restant_text"
        android:textSize="16sp"
    />

    <TextView
        android:id="@+id/text_view_nom_personnage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/defaut_nom_personnage_text">
    </TextView>

    <TextView
        android:id="@+id/text_view_nom_classe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_nom_personnage"
        android:text="@string/defaut_nom_classe"
        android:textSize="18sp"
    />

    <virus.endtheboss.Vue.HealthBar
        android:id="@+id/health_bar"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/text_view_nom_classe"/>

    <RelativeLayout
        android:id="@+id/sort_container_1"
        android:layout_below="@+id/health_bar"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:tag="nomSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaut_nom_sort"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>

        <TextView
            android:tag="actionSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/defaut_action_sort" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sort_container_2"
        android:layout_below="@+id/sort_container_1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:tag="nomSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaut_nom_sort"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>

        <TextView
            android:tag="actionSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/defaut_action_sort" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sort_container_3"
        android:layout_below="@+id/sort_container_2"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:tag="nomSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaut_nom_sort"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>

        <TextView
            android:tag="actionSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/defaut_action_sort" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sort_container_4"
        android:layout_below="@+id/sort_container_3"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:tag="nomSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaut_nom_sort"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>

        <TextView
            android:tag="actionSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/defaut_action_sort" />

    </RelativeLayout>

</RelativeLayout>